--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </section>
 <footer>
 	<div class="foot">
-	<a href="#">Desarrollado por Pablo Nogueras</a>
+	<a href="#">©Copyright 2022 </a>
 	</div>
 </footer>
 
